<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/colorBackground2">

    <Button
        android:id="@+id/button_Add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorYellow"
        android:text="@string/button_Add" />

    <Button
        android:id="@+id/button_Subtract"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorYellow"
        android:text="@string/button_Subtract" />

    <Button
        android:id="@+id/button_Multiply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorYellow"
        android:text="@string/button_Multiply" />

    <Button
        android:id="@+id/button_Division"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorYellow"
        android:text="@string/button_Division" />

    <Button
        android:id="@+id/button_Results"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/button_Results" />
</LinearLayout>